# bevy-letter-press

./: .gitignore  Cargo.toml  build.sh  macos-build.sh
leaderboard/leaderboard-lambda/: Cargo.toml  Dockerfile  release.sh
leaderboard/leaderboard-lambda/src/: main.rs
leaderboard/terraform/modules/dynamodb/: main.tf  plan.out
leaderboard/terraform/modules/lambda/: main.tf
src/: app.rs  camera.rs  dev_tools.rs  game.rs  leaderboard.rs  main.rs
src/assets/: custom.rs  mod.rs
src/assets/lexi/: game.rs  game_over.rs  levels.rs  menu.rs  mod.rs  splash.rs
src/menu/: actions.rs  inputs.rs  layouts.rs  mod.rs
wasm/: index.html
