[package]
name = "wack-a-weed"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy_aspect_ratio_mask = "0.2.0"
bevy_asset_loader = { version = "0.23.0", features = ["2d"] }
bevy_common_assets = { version = "0.13", features = ["json"] }
rand = "0.9.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
serde = "1.0.219"
bevy_simple_text_input = "0.11.1"
web-sys = "0.3.77"
gloo-net = "0.6.0"
wasm-bindgen = "0.2.100"
serde_json = "1.0.142"
bevy_http_client = "0.8.3"

[features]
# Default to a native dev build.
default = ["dev_native"]
dev = [
    # "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
    # "bevy/bevy_ui_debug",
    # "bevy/track_location",
]
dev_native = [
    "dev",
    # "bevy/file_watcher", "bevy/embedded_watcher"
]


# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Settings for small wasm build
[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"
strip = true
