[package]
name = "wack-a-weed-leaderboard-lambda"
version = "0.1.0"
edition = "2024"


[dependencies]
aws-config = { version = "1.8.4", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.101.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
lambda_http = "0.16.0"
base64 = "0.22.1"
aws-sdk-dynamodb = "1.87.0"
